# Test_Task

./: CMakeLists.txt
program_1/: CMakeLists.txt  data_processor.cpp  data_processor.h  program_1.cpp
program_2/: CMakeLists.txt  data_processor.cpp  data_processor.h  program_2.cpp
